--- a/public/forms.html
+++ b/public/forms.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>Forms Demo</h1>
+<img src="spring.png">
 <form action="http://localhost:9999" method="post" enctype="multipart/form-data">
   <input name="title">
   <input name="value">
